feat: integrar la rama de exceptions y el codigo para crear y actualizar company